--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,15 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.creteil.com.danecreteil.app">
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
@@ -24,12 +33,32 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".AccueilActivity" />
         </activity>
+        <activity
+            android:name="com.creteil.com.danecreteil.app.EtablissementActivity"
+            android:label="@string/titre_etabs_activity"
+            android:parentActivityName="com.creteil.com.danecreteil.app.VillesActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".VillesActivity" />
+        </activity>
+        <activity
+            android:name="com.creteil.com.danecreteil.app.DetailActivity"
+            android:label="@string/titre_detail_activity"
+            android:parentActivityName="com.creteil.com.danecreteil.app.EtablissementActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".EtablissementActivity" />
+        </activity>
         <provider
             android:authorities="com.creteil.com.danecreteil.app"
-            android:name=".data.DaneProvider" />
+            android:name=".data.DaneProvider"
+            android:enabled="true"
+            android:exported="true">
+        </provider>
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyDlWdTsFKgWaQaieLLZu_j_M6aLJ_3H_-w"/>
+            android:value="AIzaSyDlWdTsFKgWaQaieLLZu_j_M6aLJ_3H_-w">
+        </meta-data>
     </application>
 
 </manifest>
