--- a/gradle.properties
+++ b/gradle.properties
@@ -13,8 +13,9 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Mon Nov 28 09:17:58 CET 2016
-systemProp.https.proxyPort=3128
-systemProp.http.proxyHost=172.16.0.1
-org.gradle.jvmargs=-Xmx1536m
-systemProp.https.proxyHost=172.16.0.1
-systemProp.http.proxyPort=3128
+#systemProp.https.proxyPort=3128
+#systemProp.http.proxyHost=172.16.0.1
+#org.gradle.jvmargs=-Xmx1536m
+org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#systemProp.https.proxyHost=172.16.0.1
+#systemProp.http.proxyPort=3128
